# DeepVoiceDive

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deepvoicedive/: __init__.py  audio_io.py  batch.py  cli.py  compare.py  egemaps.py  embedding.py  features.py  gui.py  neural.py  pitch.py  profile.py  report.py  screen.py  visualize.py
tests/: conftest.py  test_batch.py  test_cli.py  test_compare.py  test_egemaps.py  test_embedding.py  test_features.py  test_gui.py  test_neural.py  test_pitch.py  test_profile.py  test_screen.py
