[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepvoicedive"
version = "0.1.0"
description = "Deep, mathematical voice analysis: eGeMAPS features, voice embeddings and biometric voice comparison."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "TapeRunner" }]
keywords = ["voice", "speech", "audio", "egemaps", "opensmile", "biometrics", "mfcc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "librosa>=0.10",
    "opensmile>=2.5",
    "scipy>=1.10",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
neural = ["speechbrain>=1.0", "torch>=2.0", "torchaudio>=2.0"]

[project.urls]
Homepage = "https://github.com/TapeRunner/DeepVoiceDive"

[project.scripts]
deepvoicedive = "deepvoicedive.cli:main"

[tool.setuptools.packages.find]
include = ["deepvoicedive*"]
